加了会议讨论纲要

--- a/2025-07-26.md
+++ b/2025-07-26.md
@@ -7,8 +7,7 @@
 - 
 # 需要做的事情
 - **todo second** 问题来了，文献（二）无RIS，文献（一）有RIS，这里的**接收信号强度**信息是否通用呢？需寻找相关文献佐证。
-- **todo third** 两三天吧，看完《Worst-case MSE Minimization for RIS-assisted  mmWave MU-MISO Systems with Hardware  Impairments and Imperfect CSI》的复现代码。
+- **todo third** 看完《Worst-case MSE Minimization for RIS-assisted  mmWave MU-MISO Systems with Hardware  Impairments and Imperfect CSI》的复现代码。
 - **todo First** 除混合预编码结构外，低精度ADC也是值得考虑的优化方向。可以尝试将现有数学研究迁移到目前的场景中，观察是否有值得注意的特性、可化简的空间（类似（一））。
 - 强化学习的时延是值得注意的优化重点，这里可能需要引入新兴的算法，例如课程学习、模拟学习、多智能体（这个算是分布式学习了吧？）等。
 - **todo fourth** 对可能用到的强化学习基准算法如PPO、SAC等进行大致了解，可以尝试在自定义环境中对比性能。至于上述的新兴算法可以放在后面再复现。
-# 初步的时间计划
